--- a/frps.ini
+++ b/frps.ini
@@ -1,21 +1,19 @@
 [common]
-bind_addr = 0.0.0.0
-bind_port = 7000
-bind_udp_port = 7001
-kcp_bind_port = 7000
+bind_port = 9000
+kcp_bind_port = 9000
 vhost_http_port = 80
 vhost_https_port = 443
 dashboard_addr = 0.0.0.0
-dashboard_port = 7500
-dashboard_user = admin
-dashboard_pwd = admin
+dashboard_port = 9001
+dashboard_user = dai
+dashboard_pwd = 562159487
 log_file = ./frps.log
 log_level = info
 log_max_days = 3
 disable_log_color = false
 token = 12345678
-allow_ports = 2000-3000,3001,3003,4000-50000
+allow_ports = 9000-9020
 max_pool_count = 5
 max_ports_per_client = 0
-subdomain_host = frps.com
+subdomain_host = lmnml.cn
 tcp_mux = true
